// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NodePane component renders a node 1`] = `
<details
  className="compatibility-node-pane"
  open={true}
>
  <Localized
    $number={1}
    id="compatibility-issue-occurrences"
  >
    <summary
      className="compatibility-node-pane__summary"
    >
      compatibility-issue-occurrences
    </summary>
  </Localized>
  <NodeList
    nodes={
      Array [
        Object {
          "actorID": "test-actor",
          "attributes": Array [],
          "nodeName": "test-element",
          "nodeType": 1,
        },
      ]
    }
  />
</details>
`;

exports[`NodePane component renders some nodes 1`] = `
<details
  className="compatibility-node-pane"
  open={false}
>
  <Localized
    $number={2}
    id="compatibility-issue-occurrences"
  >
    <summary
      className="compatibility-node-pane__summary"
    >
      compatibility-issue-occurrences
    </summary>
  </Localized>
  <NodeList
    nodes={
      Array [
        Object {
          "actorID": "test-actor-1",
          "attributes": Array [],
          "nodeName": "test-element-1",
          "nodeType": 1,
        },
        Object {
          "actorID": "test-actor-2",
          "attributes": Array [],
          "nodeName": "test-element-2",
          "nodeType": 1,
        },
      ]
    }
  />
</details>
`;
